testsuite/bsc.interra/bugs/bugID340/Design_return.bsv.bsc-out.expected
checking package dependencies
Error: "Design_return.bsv", line 12, column 19: (P0005)
  Unexpected SV 3.0 keyword `return'; expected method name
